Official Contact Address

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
         <div class="conta flx">
           <div class="item find">
             <h4><span><i class="fa fa-map-marker-alt"></i></span>Find Us</h4>
-            <p>Southampton U.K</p>
+            <p>Goslow Junction <br> Ugberikoko Sapele, <br> Delta state </p>
           </div> 
           <div class="item call">
             <h4><span><i class="fa fa-phone-alt"></i></span>Call Us</h4>
