--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
             <p>Subcribe for realtime crypto analysis and forecast.</p>
           <form action="">
             <div class="formBx">
+              <label for="Email"><i class="fa fa-envelope"></i></label>
             <input type="text" name="Email" placeholder="Enter Email ID">
             <input type="submit" value="Send">
             </div>
