--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
 							<img src="./imgz/logo/wlogo.png" alt="">
 						</div>  
         </a> 
-        <div class="menu hide-desktop hide">
+        <div class="menu hide-desktop">
           <div class="burger" ></div>
         </div>
         <nav> 
-          <a href="index.html" class="hide">Home</a>
-          <a href="#services" class="hide">Services</a>
-          <a href="rates.html" class="hide">Rates</a>
-          <a href="contact.html" class="hide">Contact</a> 
+          <a href="index.html" class="hide-mobile">Home <img src="./imgz/icons/bank.png" class="hide-desktop" alt=""></a>
+          <a href="#services" class="hide-mobile">Services <img src="./imgz/icons/business-intelligence.png" class="hide-desktop" alt=""></a>
+          <a href="rates.html" class="hide-mobile">Rates <img src="./imgz/icons/start-ups.png" class="hide-desktop" alt=""></a>
+          <a href="contact.html" class="hide-mobile">Contact <img src="./imgz/icons/24-hours-phone-service.png" class="hide-desktop" alt=""></a> 
+          <a href="./apply-now/index.html" class="hide-desktop">Trade Now <img src="./imgz/icons/trading.png" class="hide-desktop" alt=""></a> 
+
         </nav> 
-        <a href="./apply-now/index.html" class="act">Trade Now</a> 
+        <a href="./apply-now/index.html" class="act hide">Trade Now</a> 
       </div>
     </header> 
 		<!-- End of Customized Header -->
@@ -316,7 +318,7 @@
         <div class="col1">
           <img src="./imgz/logo/wlogof.png" alt="" class="flogo">
           <div class="fbx">
-          <p>Wisymore Exchange is active and buying all your crypto assets as well a asll your giftcards at the best rates.</p>
+          <p>Wisymore Exchange is active and buying all your crypto assets as well as all your giftcards at the best rates.</p>
           <img src="./imgz/Trustpilot_logo 2.png" alt="assurance" class="assurance">
           <img src="./imgz/bbb 2.png" alt="assurance" class="assurance">
           </div>
