--- a/index.html
+++ b/index.html
@@ -169,17 +169,16 @@
         </div>
       </div>
          
-        <img src="./imgz/svg/partnersns.png" alt="" class="partn"> 
       
-      <!-- <div class="partners">
-        <img src="./imgz/svg/partnersns.png" alt=""> 
-      </div> -->
+      <div class="partners">
+        <img src="./imgz/svg/partnersns.png" alt="" class="partn"> 
+      </div>
     </section>
     <section id="services">
       <div class="services container">
         <div class="top">
           <h2 class="subheading centered">Decentralized Services</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur obcaecati non dignissimos natus pariatur molestias nulla mollitia facilis accusantium labore. Aut eaque distinctio fuga natus!</p>
+          <p>Our one-stop shop offers a wide selection of cryptocurrencies, GiftCards like Apple iTunes, Google Play, Nordstorm, Steam, Sephora, Amazon, Walmart, Visa, American Express and more and of course amazing discounted deals on utility bill transactions.</p>
         </div>
         <div class="bottom">
           <div class="service-box flx">
@@ -231,7 +230,7 @@
       <div class="how container">
         <div class="top">
           <h1 class="subheading">More than a typical Crypto Exchange</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis rem laudantium dolorem totam! Velit dolorum assumenda, natus nemo optio similique doloremque dolores possimus tempora, quidem cumque delectus qui ratione fugit recusandae at adipisci?</p>
+          <p>We connect you to the power of crypto. Our mission is to make cryptocurrency accessible to everyone. Buy and sell bitcoin and other digital assets quickly and easily on desktop and mobile platform.</p>
         </div>
         <div class="bottom"> 
           <a href="#0" class="play-btn">
@@ -256,7 +255,7 @@
         <div class="contentBx">
           <h1 class="subheading">Earn as a Partner</h1>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam aperiam doloremque, reiciendis at est nam ab magni expedita officiis asperiores beatae eveniet dolorum! Laudantium quo nobis aspernatur eligendi, pariatur soluta perspiciatis, rem eius accusantium quam earum repellat laborum corrupti eaque neque voluptates hic aliquid optio, tempore dolor. Ipsa, rem magni?
+            Our trading ecosystem offers you partnership as a stakeholder to earn from commissions and referrals. Get 25% in affiliate fees instantly for qualifying trades and purchases. Our competitive conversion rates help you maximize earnings.
           </p>
 
         </div>
@@ -267,8 +266,8 @@
       <div class="press container">
         <div class="top centered">
           <!-- <span>PRESS & NEWS</span> -->
-          <h1 class="subheading">Wisymore in the Press and Media</h1>
-          <p>True to our corporate social responsibility, Wisymore has been trending in the media space across exclusive news platforms in the sub-region. Wisymore Exchange has been featured on these media firms.
+          <h1 class="subheading">Featured in the Press and Media</h1>
+          <p>True to our corporate social responsibility, Wisymore has been recogmized in the media space across exclusive news platforms in the sub-region. Wisymore Exchange has been featured by these media firms.
         </div>
         <div class="bottom">
           <div class="marquee">
@@ -326,7 +325,7 @@
         <div class="col1">
           <img src="./imgz/logo/wlogof.png" alt="" class="flogo">
           <div class="fbx">
-          <p>Wisymore Exchange is active and buying all your crypto assets as well as all your giftcards at the best rates.</p>
+          <p>Wisymore is a verified leading Exchange, active and buying all your crypto assets as well as your giftcards at the best rates.</p>
           <img src="./imgz/Trustpilot_logo 2.png" alt="assurance" class="assurance">
           <img src="./imgz/bbb 2.png" alt="assurance" class="assurance">
           </div>
