Added iPad Hero Image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="#0" class="cta unbg">Earn Reward</a>
           </div>
           <div class="imgBx">
-            <img src="./imgz/hero-img.png" alt="" width="1000px">
+            <img src="./imgz/bg/hero-img.png" alt="" width="1000px">
             <img class="coinx btc" src="./imgz/bitcoix.png" alt="">
             <img class="coinx lit" src="./imgz/litcx.png" alt="">
             <img class="coinx xco" src="./imgz/xcoin.png" alt="">
@@ -248,9 +248,9 @@
     <section id="refer">
       <div class="refer flx container">
         <div class="imgBx">
-         <img src="./imgz/AffRev.png" alt="" class="img0">
-         <img src="./imgz/refebrnd.png" alt="" class="imgb1">
-         <img src="./imgz/Affreferal.png" alt="" class="imgb2">
+         <img src="./imgz/bg/Refd.png" alt="" class="img0">
+         <!-- <img src="./imgz/refebrnd.png" alt="" class="imgb1">
+         <img src="./imgz/Affreferal.png" alt="" class="imgb2"> -->
         </div>
         <div class="contentBx">
           <h1 class="subheading">Earn as a Partner</h1>
