Fixed Overflow on Homepage

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
       <p>Reachout for Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
       </div>
     </section>
-    <section class="reach flx container">
+    <section class="reach flx">
       <div class="contentBx">
         <h3 class="subheading">
           Reachout for the best deals
