--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="#0" class="cta unbg">Earn Reward</a>
           </div>
           <div class="imgBx">
-            <img src="./imgz/bg/hero-img.png" alt="" width="1000px">
+            <img class="heroim" src="./imgz/bg/hero-img.png" alt="hero-image">
             <img class="coinx btc" src="./imgz/bitcoix.png" alt="">
             <img class="coinx lit" src="./imgz/litcx.png" alt="">
             <img class="coinx xco" src="./imgz/xcoin.png" alt="">
