--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
       <div class="container"> 
         <a href="index.html"> 
             <div class="logo">
-							<img src="./imgz/logo/wlogo.png" alt="">
+							<img src="./imgz/logo/logosr.png" alt="">
 						</div>  
         </a> 
         <div class="menu hide-desktop">
@@ -105,7 +105,7 @@
     <footer>
       <div class="top flx container">
         <div class="col1">
-          <img src="./imgz/logo/wlogof.png" alt="" class="flogo">
+          <img src="./imgz/logo/logofr.png" alt="" class="flogo">
           <div class="fbx">
           <p>Wisymore Exchange is active and buying all your crypto assets as well a asll your giftcards at the best rates.</p>
           <img src="./imgz/Trustpilot_logo 2.png" alt="assurance" class="assurance">
