Footer Links Eps.01

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
         <div class="conta flx">
           <div class="item find">
             <h4><span><i class="fa fa-map-marker-alt"></i></span>Find Us</h4>
-            <p>Goslow Junction, Ugberikoko Sapele, Delta state </p>
+            <p>Goslow Junction, Sapele, Delta State </p>
           </div> 
           <div class="item call">
             <h4><span><i class="fa fa-phone-alt"></i></span>Call Us</h4>
@@ -107,7 +107,7 @@
         <div class="col1">
           <img src="./imgz/logo/logofr.png" alt="" class="flogo">
           <div class="fbx">
-          <p>Wisymore Exchange is active and buying all your crypto assets as well a asll your giftcards at the best rates.</p>
+          <p>Wisymore is a verified leading digital exchange, active and buying all your crypto assets as well as your giftcards at the best rates.</p>
           <img src="./imgz/Trustpilot_logo 2.png" alt="assurance" class="assurance">
           <img src="./imgz/bbb 2.png" alt="assurance" class="assurance">
           </div>
@@ -117,23 +117,23 @@
           <div class="fbx">
           <a href="">Tokens</a> 
           <a href="">Features</a> 
-          <a href="">Get commission</a> 
-          <a href="">Check current rates</a> 
+          <a href="index.html#refer">Get commission</a> 
+          <a href="index.html#futures">Check current rates</a> 
           </div>
         </div>
         <div class="col3">
           <h4>Explore</h4>
           <div class="fbx">
             <a href="">FAQs</a> 
-            <a href="">Terms</a> 
-            <a href="">About Us</a> 
-            <a href="">Contact Us</a> 
+            <a href="./terms.html">Terms</a> 
+            <a href="index.html#services">Services</a> 
+            <a href="contact.html">Contact Us</a> 
           </div>
         </div>
         <div class="col4">
           <h4>Updates</h4>
           <div class="fbx">
-            <p>Subcribe for realtime crypto analysis and forecast.</p>
+            <p>Subscribe for realtime crypto analysis and forecast.</p>
           <form action="">
             <div class="formBx">
               <label for="Email"><i class="fa fa-envelope"></i></label>
