--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="futures container"> 
         <h3 class="subheading fff"> <img src="./imgz/icons/buy64.png" alt=""> Buy and sell crypto in minutes</h3>
         <p class="fff">
-          Receive the latest analysis for your trades. Observe the trend & capture more opportunities with us! <br> Explore the markets with our technical charts & advanced professional indicators on our platform for FREE.
+          Receive the latest analysis for your trades. Observe the trend & capture more opportunities with us! <br> Explore the markets with our technical charts & advanced realtime indicators on our platform for FREE.
         </p>
         <div class="tradeBx">
           
@@ -248,12 +248,10 @@
     <section id="refer">
       <div class="refer flx container">
         <div class="imgBx">
-         <img src="./imgz/bg/Refd.png" alt="" class="img0">
-         <!-- <img src="./imgz/refebrnd.png" alt="" class="imgb1">
-         <img src="./imgz/Affreferal.png" alt="" class="imgb2"> -->
+         <img src="./imgz/bg/Refd.png" alt="" class="img0"> 
         </div>
         <div class="contentBx">
-          <h1 class="subheading">Earn as a Partner</h1>
+          <h1 class="subheading">Earn as Influencer</h1>
           <p>
             Our trading ecosystem offers you partnership as a stakeholder to earn from commissions and referrals. Get 25% in affiliate fees instantly for qualifying trades and purchases. Our competitive conversion rates help you maximize earnings.
           </p>
@@ -273,43 +271,40 @@
           <div class="marquee">
             <ul class="marquee-content">
               <li class="emblem">
-                <img src="./imgz/marq/alexvent.png" alt="">
+                <img class="fen" src="./imgz/marq/alexvent.png" alt="">
               </li>
               <li class="emblem">
-                <img src="./imgz/marq/fenbushi.png" alt="">
+                <img class="fen" src="./imgz/marq/fenbushi.png" alt="">
               </li>
               <li class="emblem">
-                <img src="./imgz/marq/ft.png" alt="">
+                <img src="./imgz/marq/Pintere.png" alt="">
               </li>
               <li class="emblem">
                 <img src="./imgz/marq/guardian.png" alt="">
-              </li>
-              <li class="emblem">
-                <img src="./imgz/marq/pint.png" alt="">
-              </li>
+              </li> 
               <li class="emblem">
                 <img src="./imgz/marq/telegr.png" alt="">
               </li>
               <li class="emblem">
-                <img src="./imgz/marq/theSun.png" alt="">
+                <img class="sun" src="./imgz/marq/theSun.png" alt="">
               </li>
               <li class="emblem">
                 <img src="./imgz/marq/yutube.png" alt="">
               </li>
               <li class="emblem">
-                <img src="./imgz/marq/twitch.png" alt="">
+                <img class="fen" src="./imgz/marq/twitch.png" alt="">
               </li> 
               <li class="emblem">
-                <img src="./imgz/marq/fenbushi.png" alt="">
+                <img class="fen" src="./imgz/marq/fenbushi.png" alt="">
               </li>
               <li class="emblem">
-                <img src="./imgz/marq/ft.png" alt="">
+                <img class="fen" src="./imgz/marq/ft.png" alt="">
               </li>
               <li class="emblem">
                 <img src="./imgz/marq/guardian.png" alt="">
               </li>
               <li class="emblem">
-                <img src="./imgz/marq/pint.png" alt="">
+                <img src="./imgz/marq/Pintere.png" alt="">
               </li>
               <li class="emblem">
                 <img src="./imgz/marq/telegr.png" alt="">
@@ -325,7 +320,7 @@
         <div class="col1">
           <img src="./imgz/logo/logofr.png" alt="" class="flogo">
           <div class="fbx">
-          <p>Wisymore is a verified leading Exchange, active and buying all your crypto assets as well as your giftcards at the best rates.</p>
+          <p>Wisymore is a verified leading digital exchange, active and buying all your crypto assets as well as your giftcards at the best rates.</p>
           <img src="./imgz/Trustpilot_logo 2.png" alt="assurance" class="assurance">
           <img src="./imgz/bbb 2.png" alt="assurance" class="assurance">
           </div>
@@ -335,26 +330,26 @@
           <div class="fbx">
           <a href="">Tokens</a> 
           <a href="">Features</a> 
-          <a href="">Get commission</a> 
-          <a href="">Check current rates</a> 
+          <a href="#refer">Get commission</a> 
+          <a href="#futures">Check current rates</a> 
           </div>
         </div>
         <div class="col3">
           <h4>Explore</h4>
           <div class="fbx">
             <a href="">FAQs</a> 
-            <a href="">Terms</a> 
-            <a href="">About Us</a> 
-            <a href="">Contact Us</a> 
+            <a href="./terms.html">Terms</a> 
+            <a href="#services">Services</a> 
+            <a href="contact.html">Contact Us</a> 
           </div>
         </div>
         <div class="col4">
           <h4>Updates</h4>
           <div class="fbx">
-            <p>Subcribe for realtime crypto analysis and forecast.</p>
+            <p>Subscribe for realtime crypto analysis and forecast.</p>
           <form action="">
             <div class="formBx">
-              <label for="Email"><i class="fa fa-envelope"></i></label>
+            <label for="Email"><i class="fa fa-envelope"></i></label>
             <input type="text" name="Email" placeholder="Enter Email ID">
             <input type="submit" value="Send">
             </div>
