rates page upgrade

--- a/rates.html
+++ b/rates.html
@@ -45,42 +45,41 @@
 		<!-- End of Customized Header -->
     <section id="rates" class="banner">
       <div class="caption">
-      <h1>Cryptocurrency Calculator</h1>
-      <p>Get up-to-date rates for common trading pairs, like BTC/USD, to make it easier to understand how the market is moving currently.</p>
+      <h1>Crypto Asset Calculator</h1>
+      <p>Get up-to-date rates for common trading pairs, like BTC/USD. Check the rate. Make your purchase and trade. It's that easy.</p>
       </div>
     </section>
-    <section class="rates flx">
-      <div class="contentBx">
-        <h2>Crypto Asset Calculator</h2>
-      <p>Introducing Wisymore's cryptocurrency calculator. <br> Check the rate. Make your purchase and trade. It's that easy. </p>
-      </div>
-      <div class="form">  
-        <form action="">
-          <h3 class="title">How the crypto calculator works:</h3>
-          <p>Wisymore's live crypto calculator does the math so you don't have to, giving real rates in real time. Convert fiat to crypto, plan your investment, and buy. All with Coinmama. </p>
-          <div class="couple">
-            <div class="input-container">
-              <input type="text" name="name" class="input" id="name" required> 
-              <span>Username</span>
-            </div>
-            <div class="input-container">
-              <input type="text" name="name" class="input" id="email" required> 
-              <span>Email</span>
-            </div>
-            <div class="input-container">
-              <input type="text" name="name" class="input" id="phone"> 
-              <span>Phone</span>
-            </div> 
-            <div class="input-container">
-              <input type="text" name="name" class="input" id="phone"> 
-              <span>Phone</span>
-            </div> 
-          </div>
-          <div class="trdn">
-          <input type="submit" value="Trade Now" class="subm-btn">
-          </div>
-        </form>
+    <section class="rates flx container">
+      <div class="animBx">
+        <img src="./anim/86719-cryptocurrency.gif" alt="">
       </div> 
+        <div class="form">  
+          <form action="">
+            <h3 class="title">How the crypto calculator works:</h3>
+            <p>Wisymore's live crypto calculator does the math so you don't have to, giving real rates in real time. Convert fiat to crypto, plan your investment, and buy. All with Wisymore Exchange. </p>
+            <div class="couple">
+              <div class="input-container">
+                <input type="text" name="name" class="input" id="name" required> 
+                <span>Username</span>
+              </div>
+              <div class="input-container">
+                <input type="text" name="name" class="input" id="email" required> 
+                <span>Email</span>
+              </div>
+              <div class="input-container">
+                <input type="text" name="name" class="input" id="phone"> 
+                <span>Phone</span>
+              </div> 
+              <div class="input-container">
+                <input type="text" name="name" class="input" id="phone"> 
+                <span>Phone</span>
+              </div> 
+            </div>
+            <div class="trdn">
+            <input type="submit" value="Trade Now" class="subm-btn">
+            </div>
+          </form>
+        </div>  
     </section>
 
     
