--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
           <a href="rates.html">Rates</a>
           <a href="contact.html">Contact</a> 
         </nav> 
-        <a href="./apply-now/index.html" class="act hide">Trade Now</a> 
+        <a href="https://wa.link/y9p2cb" target="_blank" class="act hide">Trade Now</a> 
       </div>
     </header> 
 		<!-- End of Customized Header -->
@@ -115,7 +115,7 @@
         <div class="col2">
           <h4>Resources</h4>
           <div class="fbx">
-          <a href="">Tokens</a> 
+          <a href="https://wa.link/y9p2cb" target="_blank">Trade</a> 
           <a href="">Features</a> 
           <a href="index.html#refer">Get commission</a> 
           <a href="index.html#futures">Check current rates</a> 
@@ -124,7 +124,7 @@
         <div class="col3">
           <h4>Explore</h4>
           <div class="fbx">
-            <a href="">FAQs</a> 
+            <a href="faq.html">FAQs</a> 
             <a href="./terms.html">Terms</a> 
             <a href="index.html#services">Services</a> 
             <a href="contact.html">Contact Us</a> 
@@ -144,7 +144,7 @@
           <div class="sci">
             <a href="" class="fb"><i class="fab fa-facebook"></i></a>
             <a href="" class="tw"><i class="fab fa-telegram"></i></a>
-            <a href="" class="ig"><i class="fab fa-discord"></i></a>
+            <a href="https://wa.link/y9p2cb" target="_blank" class="ig"><i class="fab fa-whatsapp"></i></a>
           </div>
           </div>
         </div>
