--- a/faq.html
+++ b/faq.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./css/bit.css">
   <link rel="stylesheet" href="./css/contact.css">
   <link rel="stylesheet" href="./css/rates.css"> 
+  <link rel="stylesheet" href="./css/faq.css">
   <link rel="stylesheet" href="./css/media.css"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favic 1.png"> 
   
@@ -43,46 +44,70 @@
       </div>
     </header> 
 		<!-- End of Customized Header -->
-    <section id="rates" class="banner">
+    <section class="banner">
       <div class="caption">
-      <h1>Crypto Asset Calculator</h1>
-      <p>Get up-to-date rates for common trading pairs, like BTC/USD. Check the rate and trade. It's that easy.</p>
+      <h1>FAQs</h1>
+      <p>Have any questions or need for clarification?</p>
       </div>
     </section>
-    <section class="rates flx container">
-      <div class="animBx">
-        <img src="./anim/86719-cryptocurrency.gif" alt="">
+    <section id="faq">
+      <div class="animBx"> 
+        <video src="./anim/faq.mp4" autoplay></video>
       </div> 
-        <div class="form">  
-          <form action="">
-            <h3 class="title">How the crypto calculator works:</h3>
-            <p>Wisymore's live crypto calculator does the math so you don't have to, giving real rates in real time. Convert fiat to crypto, plan your investment, and buy. All with Wisymore Exchange. </p>
-            <div class="couple">
-              <div class="input-container">
-                <input type="text" name="name" class="input" id="name" required> 
-                <span>Username</span>
-              </div>
-              <div class="input-container">
-                <input type="text" name="name" class="input" id="email" required> 
-                <span>Email</span>
-              </div>
-              <div class="input-container">
-                <input type="text" name="name" class="input" id="phone"> 
-                <span>Phone</span>
-              </div> 
-              <div class="input-container">
-                <input type="text" name="name" class="input" id="phone"> 
-                <span>Phone</span>
-              </div> 
-            </div>
-            <div class="trdn">
-            <input type="submit" value="Trade Now" class="subm-btn">
-            </div>
-          </form>
-        </div>  
-    </section>
+      <div class="faq container">
+        <h1>Frequently Asked Questions</h1>
+        <div class="tab">
+          <input type="radio" name="acc" id="acc1">
+          <label for="acc1">
+            <h2>01</h2>
+            <h3>How do I apply?</h3>
+          </label>
+          <div class="content">
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, eius corrupti accusamus dolore illum quisquam hic voluptatem doloremque sapiente, nesciunt dolorem ipsum, ratione corporis quas quo. A perspiciatis perferendis voluptatum.
+            </p>
+          </div>
+        </div>
+        <div class="tab">
+          <input type="radio" name="acc" id="acc2">
+          <label for="acc2">
+            <h2>02</h2>
+            <h3>Lost or forgotten password?</h3>
+          </label>
+          <div class="content">
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, eius corrupti accusamus dolore illum quisquam hic voluptatem doloremque sapiente, nesciunt dolorem ipsum, ratione corporis quas quo. A perspiciatis perferendis voluptatum.
+            </p>
+          </div>
+        </div>
+        <div class="tab">
+          <input type="radio" name="acc" id="acc3">
+          <label for="acc3">
+            <h2>03</h2>
+            <h3>How can I change my application?</h3>
+          </label>
+          <div class="content">
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, eius corrupti accusamus dolore illum quisquam hic voluptatem doloremque sapiente, nesciunt dolorem ipsum, ratione corporis quas quo. A perspiciatis perferendis voluptatum.
+            </p>
+          </div>
+        </div>
+        <div class="tab">
+          <input type="radio" name="acc" id="acc4">
+          <label for="acc4">
+            <h2>04</h2>
+            <h3>How can I update my name?</h3>
+          </label>
+          <div class="content">
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, eius corrupti accusamus dolore illum quisquam hic voluptatem doloremque sapiente, nesciunt dolorem ipsum, ratione corporis quas quo. A perspiciatis perferendis voluptatum.
+            </p>
+          </div>
+        </div>
+      </div>
 
-    
+    </section>
+ 
     <footer>
       <div class="top flx container">
         <div class="col1">
@@ -105,7 +130,7 @@
         <div class="col3">
           <h4>Explore</h4>
           <div class="fbx">
-            <a href="faq.html">FAQs</a> 
+            <a href="#0">FAQs</a> 
             <a href="./terms.html">Terms</a> 
             <a href="index.html#services">Services</a> 
             <a href="contact.html">Contact Us</a> 
@@ -140,3 +165,6 @@
   <script src="bit.js"></script>
 </body>
 </html>
+
+
+
