--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a href="#services" class="hide-mobile">Services <img src="./imgz/icons/business-intelligence.png" class="hide-desktop" alt=""></a>
           <a href="rates.html" class="hide-mobile">Rates <img src="./imgz/icons/start-ups.png" class="hide-desktop" alt=""></a>
           <a href="contact.html" class="hide-mobile">Contact <img src="./imgz/icons/24-hours-phone-service.png" class="hide-desktop" alt=""></a> 
-          <a href="./apply-now/index.html" class="hide-desktop">Trade Now <img src="./imgz/icons/trading.png" class="hide-desktop" alt=""></a> 
+          <a href="https://wa.link/y9p2cb" target="_blank" class="hide-desktop">Trade Now <img src="./imgz/icons/trading.png" class="hide-desktop" alt=""></a> 
 
         </nav> 
         <a href="./apply-now/index.html" class="act hide">Trade Now</a> 
@@ -55,8 +55,8 @@
               Explore the Crypto World. Buy and sell bitcoin for fiat (or other cryptocurrencies) privately and securely using Wisymore's peer-to-peer exchange network. No registration required. <br>
                <!-- Wisymore Exchange is active and buying all your crypto assets as well as all your giftcards at the best rates. Trade now to enjoy the fast payment service. -->
             </p>
-            <a href="#0" class="cta">Trade Now</a>
-            <a href="#0" class="cta unbg">Earn Reward</a>
+            <a href="https://wa.link/y9p2cb" target="_blank" class="cta">Trade Now</a>
+            <a href="#refer" class="cta unbg">Earn Reward</a>
           </div>
           <div class="imgBx">
             <img class="heroim" src="./imgz/bg/hero-img.png" alt="hero-image">
@@ -273,33 +273,9 @@
         </div>
         <div class="bottom">
           <div class="marquee">
-            <ul class="marquee-content">
+            <ul class="marquee-content"> 
               <li class="emblem">
-                <img class="fen" src="./imgz/marq/alexvent.png" alt="">
-              </li>
-              <li class="emblem">
-                <img class="fen" src="./imgz/marq/fenbushi.png" alt="">
-              </li>
-              <li class="emblem">
-                <img src="./imgz/marq/Pintere.png" alt="">
-              </li>
-              <li class="emblem">
-                <img src="./imgz/marq/guardian.png" alt="">
-              </li> 
-              <li class="emblem">
-                <img src="./imgz/marq/telegr.png" alt="">
-              </li>
-              <li class="emblem">
-                <img class="sun" src="./imgz/marq/theSun.png" alt="">
-              </li>
-              <li class="emblem">
-                <img src="./imgz/marq/yutube.png" alt="">
-              </li>
-              <li class="emblem">
-                <img class="fen" src="./imgz/marq/twitch.png" alt="">
-              </li> 
-              <li class="emblem">
-                <img class="fen" src="./imgz/marq/fenbushi.png" alt="">
+                <img class="fen" src="./imgz/marq/cryptocompare.svg" alt="">
               </li>
               <li class="emblem">
                 <img class="fen" src="./imgz/marq/ft.png" alt="">
@@ -308,7 +284,46 @@
                 <img src="./imgz/marq/guardian.png" alt="">
               </li>
               <li class="emblem">
-                <img src="./imgz/marq/Pintere.png" alt="">
+                <img src="./imgz/marq/investopedia.svg" alt="">
+              </li>
+              <li class="emblem">
+                <img src="./imgz/marq/telegr.png" alt="">
+              </li> 
+              <li class="emblem">
+                <img class="fen" src="./imgz/marq/fenbushi.png" alt="">
+              </li>
+              <li class="emblem">
+                <img class="fen" src="./imgz/marq/alexvent.png" alt="">
+              </li>
+              <li class="emblem">
+                <img src="./imgz/marq/independent.svg" alt="">
+              </li>
+              <li class="emblem">
+                <img src="./imgz/marq/guardian.png" alt="">
+              </li> 
+              <li class="emblem">
+                <img src="./imgz/marq/breakthrough_awards.svg" alt="" class="braw">
+              </li>
+              <li class="emblem">
+                <img class="sun" src="./imgz/marq/theSun.png" alt="">
+              </li>
+              <li class="emblem">
+                <img src="./imgz/marq/yutube.png" alt="">
+              </li>
+              <li class="emblem">
+                <img class="fen" src="./imgz/marq/digital_asset_research.svg" alt="">
+              </li> 
+              <li class="emblem">
+                <img class="fen" src="./imgz/marq/cryptocompare.svg" alt="">
+              </li>
+              <li class="emblem">
+                <img class="fen" src="./imgz/marq/ft.png" alt="">
+              </li>
+              <li class="emblem">
+                <img src="./imgz/marq/guardian.png" alt="">
+              </li>
+              <li class="emblem">
+                <img src="./imgz/marq/investopedia.svg" alt="">
               </li>
               <li class="emblem">
                 <img src="./imgz/marq/telegr.png" alt="">
@@ -332,7 +347,7 @@
         <div class="col2">
           <h4>Resources</h4>
           <div class="fbx">
-          <a href="">Tokens</a> 
+          <a href="https://wa.link/y9p2cb" target="_blank">Trade</a> 
           <a href="">Features</a> 
           <a href="#refer">Get commission</a> 
           <a href="#futures">Check current rates</a> 
@@ -341,7 +356,7 @@
         <div class="col3">
           <h4>Explore</h4>
           <div class="fbx">
-            <a href="">FAQs</a> 
+            <a href="faq.html">FAQs</a> 
             <a href="./terms.html">Terms</a> 
             <a href="#services">Services</a> 
             <a href="contact.html">Contact Us</a> 
@@ -361,7 +376,7 @@
           <div class="sci">
             <a href="" class="fb"><i class="fab fa-facebook"></i></a>
             <a href="" class="tw"><i class="fab fa-telegram"></i></a>
-            <a href="" class="ig"><i class="fab fa-discord"></i></a>
+            <a href="https://wa.link/y9p2cb" target="_blank" class="ig"><i class="fab fa-whatsapp"></i></a>
           </div>
           </div>
         </div>
