Added FAQ on Mobile Nav

--- a/faq.html
+++ b/faq.html
@@ -35,10 +35,13 @@
           <div class="burger"></div>
         </div>
         <nav> 
-          <a href="index.html">Home</a>
-          <a href="index.html#services">Services</a>
-          <a href="rates.html">Rates</a>
-          <a href="contact.html">Contact</a> 
+          <a href="index.html" class="hide-mobile">Home <img src="./imgz/icons/bank.png" class="hide-desktop" alt=""></a>
+          <a href="index.html#services" class="hide-mobile">Services <img src="./imgz/icons/business-intelligence.png" class="hide-desktop" alt=""></a>
+          <a href="rates.html" class="hide-mobile">Rates <img src="./imgz/icons/start-ups.png" class="hide-desktop" alt=""></a>
+          <a href="faq.html" class="hide-desktop">FAQ<img src="./imgz/icons/question.png" class="hide-desktop" alt=""></a> 
+          <a href="contact.html" class="hide-mobile">Contact <img src="./imgz/icons/24-hours-phone-service.png" class="hide-desktop" alt=""></a> 
+          <a href="https://wa.link/y9p2cb" target="_blank" class="hide-desktop">Trade Now <img src="./imgz/icons/trading.png" class="hide-desktop" alt=""></a> 
+
         </nav> 
         <a href="https://wa.link/y9p2cb" target="_blank" class="act hide">Trade Now</a> 
       </div>
