--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
         </div>
         <nav> 
           <a href="index.html" class="hide-mobile">Home <img src="./imgz/icons/bank.png" class="hide-desktop" alt=""></a>
-          <a href="#services" class="hide-mobile">Services <img src="./imgz/icons/business-intelligence.png" class="hide-desktop" alt=""></a>
+          <a href="index.html#services" class="hide-mobile">Services <img src="./imgz/icons/business-intelligence.png" class="hide-desktop" alt=""></a>
           <a href="rates.html" class="hide-mobile">Rates <img src="./imgz/icons/start-ups.png" class="hide-desktop" alt=""></a>
+          <a href="faq.html" class="hide-desktop">FAQ<img src="./imgz/icons/question.png" class="hide-desktop" alt=""></a> 
           <a href="contact.html" class="hide-mobile">Contact <img src="./imgz/icons/24-hours-phone-service.png" class="hide-desktop" alt=""></a> 
           <a href="https://wa.link/y9p2cb" target="_blank" class="hide-desktop">Trade Now <img src="./imgz/icons/trading.png" class="hide-desktop" alt=""></a> 
+
 
         </nav> 
         <a href="./apply-now/index.html" class="act hide">Trade Now</a> 
@@ -229,6 +231,17 @@
         </div>
       </div>
     </section>
+    <!-- Features -->
+    <!-- <section id="feats">
+      <div class="feats container"> 
+        <h3 class="subheading fff"> Buy and sell crypto in minutes</h3>
+        <p class="fff">
+          Receive the latest analysis for your trades. Observe the trend & capture more opportunities with us! <br> Explore the markets with our technical charts & advanced realtime indicators on our platform for FREE.
+        </p> 
+  
+      </div> 
+    </section> -->
+    <!-- End of Features -->
     <!-- How it Works -->
     <section id="how">
       <div class="how container">
