Dedicated WhatsApp Icon

--- a/rates.html
+++ b/rates.html
@@ -83,8 +83,6 @@
           </form>
         </div>  
     </section>
-
-    
     <footer>
       <div class="top flx container">
         <div class="col1">
@@ -139,6 +137,11 @@
       </div>
     </footer> 
   
+    <!--Whatsapp Chat--> 
+    <div class="scroll-top chat" id="chat">
+    <a href="https://wa.link/y9p2cb" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    </div>
+    <!--Whatsapp Chat end--> 
   <script src="bit.js"></script>
 </body>
 </html>
