--- a/terms.html
+++ b/terms.html
@@ -149,6 +149,12 @@
         </p>
       </div>
     </footer> 
+
+    <!--Whatsapp Chat--> 
+    <div class="scroll-top chat" id="chat">
+      <a href="https://wa.link/y9p2cb" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    </div>
+  <!--Whatsapp Chat end-->
   
   <script src="bit.js"></script>
 </body>
