--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
           <p>We connect you to the power of crypto. Our mission is to make cryptocurrency accessible to everyone. Buy and sell bitcoin and other digital assets quickly and easily on desktop and mobile platform.</p>
         </div>
         <div class="bottom"> 
-          <a href="#0" class="play-btn">
+          <a data-toggle="modal" data-target="./anim/WShowcase.mp4" href="./anim/WShowcase.mp4" class="play-btn">
+            <!-- <video src="./anim/WShowcase.mp4"></video> -->
             <i class="fa fa-play"></i>
             <span class="ripple"></span>
           </a>
