--- a/faq.html
+++ b/faq.html
@@ -63,11 +63,11 @@
           <input type="radio" name="acc" id="acc1">
           <label for="acc1">
             <h2>01</h2>
-            <h3>How do I apply?</h3>
+            <h3>What is Cryptocurrency?</h3>
           </label>
           <div class="content">
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, eius corrupti accusamus dolore illum quisquam hic voluptatem doloremque sapiente, nesciunt dolorem ipsum, ratione corporis quas quo. A perspiciatis perferendis voluptatum.
+              Cryptocurrency is a type of virtual currency that uses cryptography to secure transactions that are digitally recorded on a distributed ledger, such as a blockchain.
             </p>
           </div>
         </div>
@@ -75,11 +75,11 @@
           <input type="radio" name="acc" id="acc2">
           <label for="acc2">
             <h2>02</h2>
-            <h3>Lost or forgotten password?</h3>
+            <h3>How can I buy cryptocurrencies?</h3>
           </label>
           <div class="content">
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, eius corrupti accusamus dolore illum quisquam hic voluptatem doloremque sapiente, nesciunt dolorem ipsum, ratione corporis quas quo. A perspiciatis perferendis voluptatum.
+              You can buy cryptocurrencies through a wallet, which is basically an online app for holding your crypto assets. Users generally have to create an account for a specific exchange and transfer actual money for purchasing cryptocurrencies such as Ethereum or Bitcoin.
             </p>
           </div>
         </div>
@@ -87,11 +87,11 @@
           <input type="radio" name="acc" id="acc3">
           <label for="acc3">
             <h2>03</h2>
-            <h3>How can I change my application?</h3>
+            <h3>How long does it take to trade a Cryptocurrency or Giftcard?</h3>
           </label>
           <div class="content">
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, eius corrupti accusamus dolore illum quisquam hic voluptatem doloremque sapiente, nesciunt dolorem ipsum, ratione corporis quas quo. A perspiciatis perferendis voluptatum.
+              On the average, less than 10mins to complete. However, some gift cards like Apple Store, Nike, Walmart, Nordstrom, Sephora e.t.c take more time than others. Here at Wisymore Exchange, be rest assured we attend to all transactions as fast as we can.
             </p>
           </div>
         </div>
@@ -99,11 +99,23 @@
           <input type="radio" name="acc" id="acc4">
           <label for="acc4">
             <h2>04</h2>
-            <h3>How can I update my name?</h3>
+            <h3>How do I check rates?</h3>
           </label>
           <div class="content">
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt, eius corrupti accusamus dolore illum quisquam hic voluptatem doloremque sapiente, nesciunt dolorem ipsum, ratione corporis quas quo. A perspiciatis perferendis voluptatum.
+              Click on rates menu on this Website. The rates vary depending on the crypto asset or giftcard being traded. Or you can click on the whatsapp link to immediately chat realtime with the personnel in charge.
+            </p>
+          </div>
+        </div>
+        <div class="tab">
+          <input type="radio" name="acc" id="acc4">
+          <label for="acc4">
+            <h2>05</h2>
+            <h3>How do I get paid?</h3>
+          </label>
+          <div class="content">
+            <p>
+              After successful validation of your Crypto asset (like bitcoin, ethereum, dogem etc.) or Giftcards; the trade value is added to the customer’s wallet or the monetary value transferred to the customer's bank account. Depending on what the customer prefers.
             </p>
           </div>
         </div>
