--- a/index.html
+++ b/index.html
@@ -258,6 +258,17 @@
           <img src="./imgz/vidimg.jpg" alt="">
 
         </div>
+        <div class="showvid">
+          <div class="btn">
+            <div class="play"></div>
+            <p>Play Video</p>
+          </div>
+          <div class="clip">
+            <video src="./anim/WShowcase.mp4" controls></video>
+            <b class="close">Close</b>
+          </div>
+        </div>
+
       </div>
     </section>
     <!-- End of How it Works -->
