Model Video Superposed

--- a/index.html
+++ b/index.html
@@ -250,18 +250,17 @@
           <p>We connect you to the power of crypto. Our mission is to make cryptocurrency accessible to everyone. Buy and sell bitcoin and other digital assets quickly and easily on desktop and mobile platform.</p>
         </div>
         <div class="bottom"> 
-          <a data-toggle="modal" data-target="./anim/WShowcase.mp4" href="./anim/WShowcase.mp4" class="play-btn">
-            <!-- <video src="./anim/WShowcase.mp4"></video> -->
+          <!-- <a href="#0" class="play-btn"> 
             <i class="fa fa-play"></i>
             <span class="ripple"></span>
-          </a>
-          <img src="./imgz/vidimg.jpg" alt="">
+          </a> -->
+          <!-- <img src="./imgz/vidimg.jpg" alt=""> -->
 
         </div>
         <div class="showvid">
           <div class="btn">
             <div class="play"></div>
-            <p>Play Video</p>
+            <!-- <p>Play Video</p> -->
           </div>
           <div class="clip">
             <video src="./anim/WShowcase.mp4" controls></video>
