Modal Video Landscape

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <!-- <p>Play Video</p> -->
           </div>
           <div class="clip">
-            <video src="./anim/WShowcase.mp4" controls></video>
+            <video src="./anim/MdlVid.mp4" controls></video>
             <b class="close">Close</b>
           </div>
         </div>
