Coyright Contact Page. Modal Video Structured for Mobile View

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
     <section class="banner">
       <div class="caption">
       <h1>Get in Touch</h1>
-      <p>Reachout for Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+      <p>Reachout to Wisymore Exchange for secure, fast and reliable crypto and giftcard transactions.</p>
       </div>
     </section>
     <section class="reach flx">
@@ -57,12 +57,12 @@
           Reachout for the best deals
         </h3>
         <p>
-          Contact us with new business opportunities and speaker requests. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quasi magni libero, molestiae inventore laudantium sunt alias non cumque adipisci?
+          Contact us for opportunities, you can get to earn. You can reach us at any given time you wish and we give you instant attention. You earn, we smile. It's a win win.
         </p>
         <div class="conta flx">
           <div class="item find">
             <h4><span><i class="fa fa-map-marker-alt"></i></span>Find Us</h4>
-            <p>Goslow Junction, Sapele, Delta State </p>
+            <p>Goslow Junction, <br> Sapele, Delta State </p>
           </div> 
           <div class="item call">
             <h4><span><i class="fa fa-phone-alt"></i></span>Call Us</h4>
