--- a/index.html
+++ b/index.html
@@ -255,18 +255,17 @@
             <span class="ripple"></span>
           </a> -->
           <!-- <img src="./imgz/vidimg.jpg" alt=""> -->
+          <div class="showvid">
+            <div class="btn">
+              <div class="play"></div> 
+            </div>
+            <div class="clip"> 
+              <video src="./anim/MdlVid.mp4" controls></video>
+              <b class="close"> <i class="fa fa-power-off"></i> </b>
+            </div>
+          </div>
+        </div>
 
-        </div>
-        <div class="showvid">
-          <div class="btn">
-            <div class="play"></div>
-            <!-- <p>Play Video</p> -->
-          </div>
-          <div class="clip">
-            <video src="./anim/MdlVid.mp4" controls></video>
-            <b class="close">Close</b>
-          </div>
-        </div>
 
       </div>
     </section>
